main goal functionality added

--- a/calculator/calculator.html
+++ b/calculator/calculator.html
@@ -28,7 +28,7 @@
                 <button type="button" class="decimal" value=".">.</button>
                 <button type="button" class="clear" value="clear">AC</button>
     
-                <button type="button" class="equal" value="=">=</button>
+                <button type="button" class="equal operator" value="=">=</button>
             </div>
         </div>        
     </body>
